# mcp-project

notion/: .env  README.md  config.json  inspector-config.json  metadata.json  new.py  pyproject.toml
